feat：提交功能RABC的权限控制、底层禁用多表联查功能 。修复bug